2001-10-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h (SCM_T_BITS_MAX, SCM_T_SIGNED_BITS_MAX,
	SCM_T_SIGNED_BITS_MIN): New.
	* numbers.h (SCM_MOST_POSITIVE_FIXNUM, SCM_MOST_NEGATIVE_FIXNUM):
	Use them to make these macros computable by the preprocessor.

	* num2integral.i.c (INTEGRAL2NUM): Let the preprocessor test
	whether the integral type fits in a fixnum, not the compiler.
	This removes a spurious compiler warning.  Also, honor the
	NO_PREPRO_MAGIC flag to suppress any preprocessor tests.  This is
	needed for `long long's.

	* numbers.c: Define NO_PREPRO_MAGOC when including
	num2integral.c.i for `long long' and `signed long long'.

2001-10-06  Mikael Djurfeldt  <mdj@linnaeus>

	These changes fixes a race condition in the Guile coop - pthread
	compatibility code.
	
	* coop.c (mother_awake_p): New variable.
	(coop_create): Set mother_awake_p before creating or signalling
	mother; wait until mother is going to sleep before returning.
	(mother): Reset mother_awake_p before going to sleep.

2001-10-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* options.c (protected_objects, scm_init_options):  The content of
	protected_objects is now protected from garbage collection using
	scm_gc_register_root instead of scm_permanent_object.

	(get_option_setting):  New static function that	computes an option
	setting as it was formerly done in the function scm_options.

	(get_documented_option_setting):  New static function that
	returns option documentation as it was formerly done in the
	function scm_options.  Note that documentation C strings are no
	longer precomputed into SCM objects.  Instead, they are converted
	into SCM strings every time get_documented_option_setting is
	called.

	(change_option_setting):  New static functions that modifies the
	option setting as it was formerly done in the function
	scm_options.  The function is now exception safe, i. e. won't
	cause a memory leak when interrupted.  Further, only non-immediate